--- a/Integrators_lib.vcxproj.filters
+++ b/Integrators_lib.vcxproj.filters
@@ -13,8 +13,39 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="math">
+      <UniqueIdentifier>{8387636f-35ca-4143-868d-5308326cde5d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="math\Headers">
+      <UniqueIdentifier>{d23274a6-3030-41d9-bacc-70953d09e321}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="libIntegrators.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="libIntegrators.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="Integrators\Integrators.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="linear_algebra\array_operations.h">
+      <Filter>math\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="linear_algebra\mathutility.h">
+      <Filter>math\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="linear_algebra\matrixtemplate.h">
+      <Filter>math\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="linear_algebra\vectortemplate.h">
+      <Filter>math\Headers</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
